--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ html {
 
 body {
   width: 600px;
-  margin: 0 auto;
+  margin: 20px auto;
   background-color: #FF9500;
   padding: 0 20px 20px 20px;
   border: 5px solid black;
@@ -33,7 +33,10 @@ h1 {
   text-shadow: 3px 3px 3px black;
 }
 
-
+img {
+  display: block;
+  margin: 0 auto;
+}
 
 
 
