update header shadow colors

--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ h1 {
   margin: 0;
   padding: 20px 0;
   color: #00539F;
-  text-shadow: 3px 3px 3px black;
+  text-shadow: 4px 4px 4px darkslategray;
 }
 
 img {
